# cpp_rendering_pipeline_3D

./: .gitignore  CMakeLists.txt  README.md  test.txt
assignment_1/: CMakeLists.txt  Untitled Diagram.drawio
assignment_1/include/rpl/: engine.h  transformations.h
assignment_1/src/: main.cpp
assignment_2/: CMakeLists.txt  main  main.cpp  rasterization
assignment_2/include/rpl_2/: engine.h  mesh.h  texture.h
assignment_2/src/: rasterization.cpp  rasterization.h  texture.cpp  texture.h
assignment_3/: .gitignore  main.cpp  rasterization.h  read-obj.h  scene.h  timer.h
assignment_3/analysis/: scene_level_10000_1.txt  scene_level_10000_5.txt  scene_level_1000_1.txt  scene_level_1000_5.txt  scene_level_100_1.txt  scene_level_100_5.txt  triangle_level_10000_1.txt  triangle_level_10000_5.txt  triangle_level_1000_1.txt  triangle_level_1000_5.txt  triangle_level_100_1.txt  triangle_level_100_5.txt
assignment_3/scanline_level/: main.cpp  rasterization.h  scene.h
assignment_3/scene_level/: main.cpp  scene.h
assignment_3/scene_level_threading/: .main.cpp.swp  main  main.cpp  read-obj.cpp  scene.h
assignment_3/triangle_level/: main.cpp  rasterization.h  scene.h
include/rpl/: engine.h  math.h  mesh.h  pipe.h  rpl.h  shader.h  target.h  transformations.h
src/: main.cpp  math.cpp
